WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289970
REGRESSION(
290838@main
): Entering QuickLook fullscreen calls the completion handler twice
https://bugs.webkit.org/show_bug.cgi?id=289970
Summary
REGRESSION(290838@main): Entering QuickLook fullscreen calls the completion h...
Etienne
Reported
2025-03-18 10:01:05 PDT
Entering QuickLook fullscreen calls the completion handler twice, causing a crash.
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2025-03-18 10:06:32 PDT
<
rdar://problem/147261212
>
Etienne
Comment 2
2025-03-18 10:06:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42627
EWS
Comment 3
2025-03-19 10:22:38 PDT
Committed
292366@main
(1d210108fe4f): <
https://commits.webkit.org/292366@main
> Reviewed commits have been landed. Closing PR #42627 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug