REGRESSION(290838@main): Entering QuickLook fullscreen calls the completion handler twice https://bugs.webkit.org/show_bug.cgi?id=289970 <rdar://147261212>

Reviewed by Geoffrey Garen.

A small issue sneaked in the refactoring, causing us to call the completion
handler twice.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController _enterFullScreen:windowScene:completionHandler:]):
Only call the completion handler once the WKSPreviewWindowController has been presented.

Canonical link: https://commits.webkit.org/292366@main